@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.3.1-cur, done by cs@nop.
--;-;-;2022-03-01 18:15:55, took 00:07:13, with 100 workers, on 2764 cases, 0 failed, 0 traces, 7 retries
+-;-;-;2022-03-01 18:26:19, took 00:08:16, with 100 workers, on 2764 cases, 0 failed, 0 traces, 3 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -284,8 +284,8 @@ http://sources.nop.hu/cfg/conn-nvgre10.tst;conn-nvgre10.tst;success;sep tunnelin
 http://sources.nop.hu/cfg/conn-nvgre11.tst;conn-nvgre11.tst;success;ethernet tunneling with nvgre
 http://sources.nop.hu/cfg/conn-nvgre12.tst;conn-nvgre12.tst;success;vlan tunneling with nvgre
 http://sources.nop.hu/cfg/conn-nvgre13.tst;conn-nvgre13.tst;success;tunnel interface with nvgre
-http://sources.nop.hu/cfg/conn-p4lang1.tst;conn-p4lang1.tst;success;unnamed
-http://sources.nop.hu/cfg/conn-p4lang2.tst;conn-p4lang2.tst;success;unnamed
+http://sources.nop.hu/cfg/conn-p4lang01.tst;conn-p4lang01.tst;success;p4lang demultiplexer
+http://sources.nop.hu/cfg/conn-p4lang02.tst;conn-p4lang02.tst;success;p4lang downlink
 http://sources.nop.hu/cfg/conn-pckoi01.tst;conn-pckoi01.tst;success;pckoip over ipv4
 http://sources.nop.hu/cfg/conn-pckoi02.tst;conn-pckoi02.tst;success;pckoip over ipv6
 http://sources.nop.hu/cfg/conn-pckoi03.tst;conn-pckoi03.tst;success;pckoip over pckoip
