@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.3.1-cur, done by cs@nop.<br/>
-tested: 2022-03-01 18:15:55, took 00:07:13, with 100 workers, on 2764 cases, 0 failed, 0 traces, 7 retries<br/>
+tested: 2022-03-01 18:26:19, took 00:08:16, with 100 workers, on 2764 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -297,8 +297,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-nvgre11.tst">conn-nvgre11.tst</a></td><td>success</td><td>ethernet tunneling with nvgre</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-nvgre12.tst">conn-nvgre12.tst</a></td><td>success</td><td>vlan tunneling with nvgre</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-nvgre13.tst">conn-nvgre13.tst</a></td><td>success</td><td>tunnel interface with nvgre</td></tr>
-<tr><td><a href="http://sources.nop.hu/cfg/conn-p4lang1.tst">conn-p4lang1.tst</a></td><td>success</td><td>unnamed</td></tr>
-<tr><td><a href="http://sources.nop.hu/cfg/conn-p4lang2.tst">conn-p4lang2.tst</a></td><td>success</td><td>unnamed</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/conn-p4lang01.tst">conn-p4lang01.tst</a></td><td>success</td><td>p4lang demultiplexer</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/conn-p4lang02.tst">conn-p4lang02.tst</a></td><td>success</td><td>p4lang downlink</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-pckoi01.tst">conn-pckoi01.tst</a></td><td>success</td><td>pckoip over ipv4</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-pckoi02.tst">conn-pckoi02.tst</a></td><td>success</td><td>pckoip over ipv6</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/conn-pckoi03.tst">conn-pckoi03.tst</a></td><td>success</td><td>pckoip over pckoip</td></tr>
